<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/lastMatch"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_calendar_today"
        android:title="@string/last_match"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nextMatch"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_event"
        android:title="@string/next_match"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/favMatch"
        android:enabled="true"
        android:icon="@drawable/ic_added_to_fav"
        android:title="@string/favorite_match"
        app:showAsAction="ifRoom"/>
</menu>